# miso-example

./: LICENSE  README.md  makefile  miso-example.cabal  stack-ghcjs-8.0.1.yaml
app/: App1.hs  App2.hs  Main.hs
stack/ghcjs-8.0.1/: stack.yaml
